<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.expensemanager.app.ui.home.HomeFragment"
        android:label="@string/nav_home" />

    <fragment
        android:id="@+id/budgetFragment"
        android:name="com.expensemanager.app.ui.budget.BudgetOverviewFragment"
        android:label="@string/nav_budget" />

    <fragment
        android:id="@+id/transactionListFragment"
        android:name="com.expensemanager.app.ui.transaction.TransactionListFragment"
        android:label="@string/nav_transactions" />

    <fragment
        android:id="@+id/reportFragment"
        android:name="com.expensemanager.app.ui.report.ReportFragment"
        android:label="@string/nav_report" />

    <fragment
        android:id="@+id/profileFragment"
        android:name="com.expensemanager.app.ui.profile.ProfileFragment"
        android:label="@string/nav_profile" />

</navigation>
